graphlite/src/ast/parser.rs
// Copyright (c) 2024-2025 DeepGraph Inc.
// SPDX-License-Identifier: Apache-2.0
//
//! Parser for GQL graph language using nom parsers

use log::debug;
use nom::{
    branch::alt,
    combinator::{map, opt, success, value, verify},
    multi::{many0, many1, separated_list1},
    sequence::{delimited, pair, preceded, terminated, tuple},
    IResult,
};

use super::ast::*;
use super::lexer::{tokenize, Token};
use super::pretty_printer::pretty_print_ast;

/// Parser error type
#[derive(Debug, thiserror::Error)]
pub enum ParserError {
    #[error("Lexer error: {0}")]
    LexerError(String),
    #[error("Unexpected token: {0:?}")]
    UnexpectedToken(Token),
    #[error("Expected token: {0:?}")]
    ExpectedToken(Token),
    #[error("Invalid syntax 'DELETE SCHEMA'. Schema deletion uses 'DROP SCHEMA'. Correct syntax: DROP SCHEMA [IF EXISTS] schema_name [CASCADE | RESTRICT]. Example: DROP SCHEMA analytics_db")]
    InvalidDeleteSchema,
    #[error("Invalid syntax 'DELETE GRAPH'. Graph deletion uses 'DROP GRAPH'. Correct syntax: DROP [PROPERTY] GRAPH [IF EXISTS] graph_path. Example: DROP GRAPH /test_schema/test_restrict_graph2")]
    InvalidDeleteGraph,
    #[error("Incomplete UNION operation. Expected a query after UNION. Syntax: query1 UNION [ALL] query2")]
    IncompleteUnion,
    #[error("Incomplete EXCEPT operation. Expected a query after EXCEPT. Syntax: query1 EXCEPT [ALL] query2")]
    IncompleteExcept,
    #[error("Incomplete INTERSECT operation. Expected a query after INTERSECT. Syntax: query1 INTERSECT [ALL] query2")]
    IncompleteIntersect,
}

/// Filter SQL-style comments from a token stream
/// SQL comments are two consecutive Dash tokens followed by any tokens until EOF or newline
fn filter_sql_comments(tokens: Vec<Token>) -> Vec<Token> {
    let mut filtered = Vec::new();
    let mut i = 0;

    while i < tokens.len() {
        // Check for SQL comment pattern: Dash, Dash, ...
        if i + 1 < tokens.len()
            && matches!(tokens[i], Token::Dash)
            && matches!(tokens[i + 1], Token::Dash)
        {
            // Check if this is actually a comment (not part of an edge pattern)
            // SQL comments are recognized when -- is followed by whitespace or identifiers
            // but NOT when followed by >, <, [, or (
            if i + 2 < tokens.len() {
                match &tokens[i + 2] {
                    Token::Arrow
                    | Token::ArrowLeft
                    | Token::ArrowBoth
                    | Token::LeftParen
                    | Token::LeftBracket => {
                        // This is an edge pattern, not a comment
                        filtered.push(tokens[i].clone());
                        i += 1;
                    }
                    Token::EOF => {
                        // Just -- at end of input, keep as edge pattern
                        filtered.push(tokens[i].clone());
                        i += 1;
                    }
                    _ => {
                        // This looks like a SQL comment, skip all tokens until EOF
                        // (In a real implementation, we'd skip until newline, but our lexer
                        // doesn't produce newline tokens, so we skip to EOF)
                        while i < tokens.len() && !matches!(tokens[i], Token::EOF) {
                            i += 1;
                        }
                    }
                }
            } else {
                // Just -- at end, keep as edge pattern
                filtered.push(tokens[i].clone());
                i += 1;
            }
        } else {
            filtered.push(tokens[i].clone());
            i += 1;
        }
    }

    filtered
}

/// Parse a GQL query or statement into an AST Document
pub fn parse_query(input: &str) -> Result<Document, ParserError> {
    // Debug: Print query text if it contains GROUP BY
    if input.contains("GROUP BY") {
        log::debug!(
            "PARSER: Parsing query with GROUP BY: {}",
            input.trim().split('\n').collect::<Vec<_>>().join(" ")
        );
    }

    // First tokenize the input
    let mut tokens = tokenize(input).map_err(ParserError::LexerError)?;

    // Filter out SQL-style comments at the parser level
    tokens = filter_sql_comments(tokens);

    // Debug: Check if GROUP BY tokens exist
    if input.contains("GROUP BY") {
        let has_group_token = tokens.iter().any(|t| matches!(t, Token::Group));
        let has_by_token = tokens.iter().any(|t| matches!(t, Token::By));
        log::debug!(
            "PARSER: Token stream has GROUP={}, BY={}",
            has_group_token,
            has_by_token
        );
    }

    // Check for invalid DELETE SCHEMA and DELETE GRAPH patterns before parsing
    if tokens.len() >= 2 {
        match (&tokens[0], &tokens[1]) {
            (Token::Delete, Token::Schema) => {
                return Err(ParserError::InvalidDeleteSchema);
            }
            (Token::Delete, Token::Graph) => {
                return Err(ParserError::InvalidDeleteGraph);
            }
            _ => {}
        }
    }

    // Check for incomplete set operations (trailing keywords without right-hand side)
    // Look for set operation keywords followed by EOF or at the end
    for i in 0..tokens.len() {
        match &tokens[i] {
            Token::Union => {
                // Check if this is followed by EOF or is the last meaningful token
                if i + 1 >= tokens.len() || matches!(tokens.get(i + 1), Some(Token::EOF) | None) {
                    return Err(ParserError::IncompleteUnion);
                }
            }
            Token::Except => {
                if i + 1 >= tokens.len() || matches!(tokens.get(i + 1), Some(Token::EOF) | None) {
                    return Err(ParserError::IncompleteExcept);
                }
            }
            Token::Intersect => {
                if i + 1 >= tokens.len() || matches!(tokens.get(i + 1), Some(Token::EOF) | None) {
                    return Err(ParserError::IncompleteIntersect);
                }
            }
            _ => {}
        }
    }

    // Handle comment-only or empty input
    if tokens.is_empty() || (tokens.len() == 1 && matches!(tokens[0], Token::EOF)) {
        return Err(ParserError::ExpectedToken(Token::Identifier(
            "statement".to_string(),
        )));
    }

    // Try to parse as different statement types
    if let Ok((_, at_stmt)) = at_location_statement(&tokens) {
        let document = Document {
            statement: Statement::AtLocation(at_stmt),
            location: Location::default(),
        };

        debug!("Successfully parsed AT location statement into AST");
        pretty_print_ast(&document);

        Ok(document)
    } else if let Ok((_, declare_stmt)) = declare_statement(&tokens) {
        let document = Document {
            statement: Statement::Declare(declare_stmt),
            location: Location::default(),
        };

        debug!("Successfully parsed DECLARE statement into AST");
        pretty_print_ast(&document);

        Ok(document)
    // NEXT statements are not allowed as standalone statements
    // They can only appear within procedure body contexts
    } else if let Ok((_, session_stmt)) = session_statement(&tokens) {
        let document = Document {
            statement: Statement::SessionStatement(session_stmt),
            location: Location::default(),
        };

        debug!("Successfully parsed session statement into AST");
        pretty_print_ast(&document);

        Ok(document)
    } else if let Ok((_, transaction_stmt)) = transaction_statement(&tokens) {
        let document = Document {
            statement: Statement::TransactionStatement(transaction_stmt),
            location: Location::default(),
        };

        debug!("Successfully parsed transaction statement into AST");
        pretty_print_ast(&document);

        Ok(document)
    } else if let Ok((_, catalog_stmt)) = catalog_statement(&tokens) {
        let document = Document {
            statement: Statement::CatalogStatement(catalog_stmt),
            location: Location::default(),
        };

        debug!("Successfully parsed catalog statement into AST");
        pretty_print_ast(&document);

        Ok(document)
    } else if let Ok((_, index_stmt)) = index_statement(&tokens) {
        let document = Document {
            statement: Statement::IndexStatement(index_stmt),
            location: Location::default(),
        };

        debug!("Successfully parsed index statement into AST");
        pretty_print_ast(&document);

        Ok(document)
    } else if let Ok((_, data_stmt)) = data_statement(&tokens) {
        log::debug!(
            "PARSER: Matched as DataStatement: {:?}",
            std::mem::discriminant(&data_stmt)
        );
        let document = Document {
            statement: Statement::DataStatement(data_stmt.clone()),
            location: Location::default(),
        };

        debug!(
            "Successfully parsed data modification statement into AST: {:?}",
            std::mem::discriminant(&data_stmt)
        );
        if let DataStatement::MatchSet(ref ms) = data_stmt {
            debug!(
                "PARSER: MatchSet has WITH clause: {}",
                ms.with_clause.is_some()
            );
        }
        pretty_print_ast(&document);

        Ok(document)
    } else if let Ok((_, procedure_body)) = procedure_body_statement(&tokens) {
        let document = Document {
            statement: Statement::ProcedureBody(procedure_body),
            location: Location::default(),
        };

        debug!("Successfully parsed procedure body into AST");
        pretty_print_ast(&document);

        Ok(document)
    } else if let Ok((remaining, call_stmt)) = call_statement(&tokens) {
        // Validate that only Semicolon/EOF remain after CALL statement
        // CALL cannot be combined with RETURN, MATCH, or other clauses
        let only_terminators = remaining
            .iter()
            .all(|t| matches!(t, Token::Semicolon | Token::EOF));

        if !only_terminators {
            // Found unexpected tokens after CALL statement
            // Get the first unexpected token
            let unexpected = remaining
                .iter()
                .find(|t| !matches!(t, Token::Semicolon | Token::EOF))
                .unwrap_or(&Token::EOF);
            return Err(ParserError::UnexpectedToken(unexpected.clone()));
        }

        let document = Document {
            statement: Statement::Call(call_stmt),
            location: Location::default(),
        };

        debug!("Successfully parsed CALL statement into AST");
        pretty_print_ast(&document);

        Ok(document)
    } else if let Ok((_, select_stmt)) = select_statement(&tokens) {
        let document = Document {
            statement: Statement::Select(select_stmt),
            location: Location::default(),
        };

        debug!("Successfully parsed SELECT statement into AST");
        pretty_print_ast(&document);

        Ok(document)
    } else if let Ok((_, query)) = query(&tokens) {
        log::debug!(
            "PARSER: Matched as Query: {:?}",
            std::mem::discriminant(&query)
        );
        if let Query::Basic(ref basic_query) = query {
            log::debug!(
                "PARSER: BasicQuery has GROUP BY: {}",
                basic_query.group_clause.is_some()
            );
        } else if let Query::Limited { ref query, .. } = query {
            log::debug!(
                "PARSER: Limited query wrapping: {:?}",
                std::mem::discriminant(query.as_ref())
            );
            if let Query::Basic(ref basic_query) = query.as_ref() {
                log::debug!(
                    "PARSER: Wrapped BasicQuery has GROUP BY: {}",
                    basic_query.group_clause.is_some()
                );
            }
        }
        let document = Document {
            statement: Statement::Query(query.clone()),
            location: Location::default(),
        };

        debug!(
            "Successfully parsed GQL query into AST: {:?}",
            std::mem::discriminant(&query)
        );
        if let Query::MutationPipeline(ref mp) = query {
            debug!(
                "PARSER: MutationPipeline has {} segments",
                mp.segments.len()
            );
        }
        pretty_print_ast(&document);

        Ok(document)
    } else {
        debug!("PARSER: Failed to parse as any statement type");
        debug!(
            "PARSER: First few tokens: {:?}",
            tokens.get(0..10).unwrap_or(&[])
        );
        // Return the first token as unexpected since we couldn't parse it
        let unexpected = tokens.first().unwrap_or(&Token::EOF);
        Err(ParserError::UnexpectedToken(unexpected.clone()))
    }
}

/// Parse a complete query: MATCH [WHERE] RETURN [GROUP BY] [HAVING] [ORDER BY] [LIMIT]
/// Parse query with set operations support
/// <query-statement> ::= <query-term> (("UNION" | "EXCEPT") ["ALL"] <query-term> | "INTERSECT" ["ALL"] <query-term>)*
fn query(tokens: &[Token]) -> IResult<&[Token], Query> {
    parse_set_operation(tokens)
}

/// Parse core query logic (set operations, basic queries) without modifiers
/// This is the clean separation: core query parsing vs modifier parsing
fn parse_core_query(tokens: &[Token]) -> IResult<&[Token], Query> {
    parse_union_except(tokens)
}

/// Apply ORDER BY and LIMIT modifiers to any query type
/// This is the unified approach - one function handles all query variants
fn apply_query_modifiers(
    query: Query,
    order_clause: Option<OrderClause>,
    limit_clause: Option<LimitClause>,
) -> Query {
    match (order_clause, limit_clause) {
        // No modifiers - return query as-is
        (None, None) => query,

        // Has modifiers - apply them based on query type
        (order, limit) => {
            match query {
                // For set operations, apply modifiers directly to the SetOperation struct
                Query::SetOperation(mut set_op) => {
                    set_op.order_clause = order;
                    set_op.limit_clause = limit;
                    Query::SetOperation(set_op)
                }

                // For BasicQuery, apply modifiers directly to preserve GROUP BY/HAVING
                // BasicQuery already has order_clause and limit_clause fields
                Query::Basic(mut basic_query) => {
                    // Only override if not already set (basic_query parser may have consumed them)
                    if basic_query.order_clause.is_none() {
                        basic_query.order_clause = order;
                    }
                    if basic_query.limit_clause.is_none() {
                        basic_query.limit_clause = limit;
                    }
                    Query::Basic(basic_query)
                }

                // For other query types, use the Limited wrapper
                _ => Query::Limited {
                    query: Box::new(query),
                    order_clause: order,
                    limit_clause: limit,
                },
            }
        }
    }
}

/// Parse complete query with clean precedence: core query + modifiers
/// This implements Option 3: Restructured Parser Precedence
fn parse_set_operation(tokens: &[Token]) -> IResult<&[Token], Query> {
    // Step 1: Parse the core query (UNION, INTERSECT, MATCH, etc.)
    let (remaining, core_query) = parse_core_query(tokens)?;

    log::debug!(
        "parse_set_operation: core_query type = {:?}",
        std::mem::discriminant(&core_query)
    );
    match &core_query {
        Query::Basic(bq) => {
            log::debug!("parse_set_operation: BasicQuery has group_clause={}, order_clause={}, limit_clause={}",
                     bq.group_clause.is_some(), bq.order_clause.is_some(), bq.limit_clause.is_some());
        }
        Query::Limited {
            query,
            order_clause,
            limit_clause,
        } => {
            log::debug!(
                "parse_set_operation: Limited query has order={}, limit={}",
                order_clause.is_some(),
                limit_clause.is_some()
            );
            if let Query::Basic(bq) = query.as_ref() {
                log::debug!("parse_set_operation: Wrapped BasicQuery has group_clause={}, order_clause={}, limit_clause={}",
                         bq.group_clause.is_some(), bq.order_clause.is_some(), bq.limit_clause.is_some());
            }
        }
        _ => {
            log::debug!("parse_set_operation: Other query type");
        }
    }

    // Step 2: Parse optional modifiers that can apply to any query
    let (remaining, order_clause) = opt(order_clause)(remaining)?;
    let (remaining, limit_clause) = opt(limit_clause)(remaining)?;

    log::debug!(
        "parse_set_operation: Parsed order_clause={}, limit_clause={}",
        order_clause.is_some(),
        limit_clause.is_some()
    );

    // Step 3: Apply modifiers using unified logic
    let final_query = apply_query_modifiers(core_query, order_clause, limit_clause);

    log::debug!(
        "parse_set_operation: final_query type = {:?}",
        std::mem::discriminant(&final_query)
    );

    Ok((remaining, final_query))
}

/// Parse UNION and EXCEPT operations (lower precedence)
fn parse_union_except(tokens: &[Token]) -> IResult<&[Token], Query> {
    let (mut remaining, mut left) = parse_intersect(tokens)?;

    while let Ok((new_remaining, (operation, right))) = parse_union_except_op(remaining) {
        left = Query::SetOperation(SetOperation {
            left: Box::new(left),
            operation,
            right: Box::new(right),
            limit_clause: None,
            order_clause: None,
            location: Location::default(),
        });
        remaining = new_remaining;
    }

    // Check for incomplete set operations (UNION/EXCEPT without right-hand side)
    if !remaining.is_empty() {
        if let Some(token) = remaining.first() {
            match token {
                Token::Union => {
                    return Err(nom::Err::Error(nom::error::Error::new(
                        remaining,
                        nom::error::ErrorKind::Alt,
                    )));
                }
                Token::Except => {
                    return Err(nom::Err::Error(nom::error::Error::new(
                        remaining,
                        nom::error::ErrorKind::Alt,
                    )));
                }
                _ => {}
            }
        }
    }

    Ok((remaining, left))
}

/// Parse INTERSECT operations (higher precedence)
fn parse_intersect(tokens: &[Token]) -> IResult<&[Token], Query> {
    let (mut remaining, mut left) = parse_query_term(tokens)?;

    while let Ok((new_remaining, (operation, right))) = parse_intersect_op(remaining) {
        left = Query::SetOperation(SetOperation {
            left: Box::new(left),
            operation,
            right: Box::new(right),
            limit_clause: None,
            order_clause: None,
            location: Location::default(),
        });
        remaining = new_remaining;
    }

    // Check for incomplete INTERSECT operations
    if !remaining.is_empty() {
        if let Some(token) = remaining.first() {
            if token == &Token::Intersect {
                return Err(nom::Err::Error(nom::error::Error::new(
                    remaining,
                    nom::error::ErrorKind::Alt,
                )));
            }
        }
    }

    Ok((remaining, left))
}

/// Parse a single query term (basic query or parenthesized set operation)
fn parse_query_term(tokens: &[Token]) -> IResult<&[Token], Query> {
    alt((
        // Parenthesized query with optional ORDER BY and LIMIT
        parse_parenthesized_query_with_modifiers,
        // LET statement
        let_statement,
        // FOR statement
        for_statement,
        // FILTER statement
        filter_statement,
        // UNWIND statement
        unwind_statement,
        // Mutation pipeline (WITH...UNWIND...REMOVE/SET/DELETE)
        mutation_pipeline,
        // Basic query - MUST come before with_query!
        // BasicQuery (MATCH...RETURN) is more specific than WithQuery (MATCH...WITH...RETURN)
        // so it should be tried first to avoid WithQuery consuming BasicQuery patterns
        basic_query,
        // WITH query (chain of segments)
        with_query,
        // Standalone RETURN query
        return_query,
    ))(tokens)
}

/// Parse parenthesized query - only parse clauses that are actually inside parentheses
/// This prevents consuming trailing clauses that belong to outer set operations
fn parse_parenthesized_query_with_modifiers(tokens: &[Token]) -> IResult<&[Token], Query> {
    // Parse parenthesized query without trailing modifiers
    let (remaining, query) = delimited(
        expect_token(Token::LeftParen),
        parse_set_operation, // Use full parsing inside parentheses (this handles internal LIMIT/ORDER BY)
        expect_token(Token::RightParen),
    )(tokens)?;

    Ok((remaining, query))
}

/// Parse basic query (MATCH ... RETURN ...)
fn basic_query(tokens: &[Token]) -> IResult<&[Token], Query> {
    log::debug!("basic_query function called");
    map(
        tuple((
            match_clause,
            opt(where_clause),
            return_clause,
            opt(group_clause),
            opt(having_clause),
            opt(order_clause),
            opt(limit_clause),
        )),
        |(
            match_clause,
            where_clause,
            return_clause,
            group_clause,
            having_clause,
            order_clause,
            limit_clause,
        )| {
            log::debug!(
                "basic_query parser: group_clause={}, order_clause={}, limit_clause={}",
                group_clause.is_some(),
                order_clause.is_some(),
                limit_clause.is_some()
            );
            Query::Basic(BasicQuery {
                match_clause,
                where_clause,
                return_clause,
                group_clause,
                having_clause,
                order_clause,
                limit_clause,
                location: Location::default(),
            })
        },
    )(tokens)
}
